bootstrap/kubernetes/apps/media/lidarr/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: media
spec:
  type: LoadBalancer
  ports:
    - port: 8686
      protocol: TCP
      targetPort: 8686
      name: webui
  selector:
    run: lidarr
  loadBalancerIP: 10.42.20.65
